--- a/SimpleANN_Scratch.ipynb
+++ b/SimpleANN_Scratch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN7nCHSQLDO+8WOJQ1yHoPL",
+      "authorship_tag": "ABX9TyN+xnCzCFUtfWufbyDONuzb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       "metadata": {
         "id": "ffqHBm9HQU6X"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -51,7 +51,7 @@
       "metadata": {
         "id": "R3y1n-sCQdn_"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
         "id": "gvVH67r2Qik5",
         "outputId": "a9443d6d-0114-46e8-9e9e-5e57c76e6c00"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -94,7 +94,7 @@
         "id": "LFkIgK85QkF0",
         "outputId": "4801ac6c-d239-42cd-a8b3-8a42b8c0b650"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -134,7 +134,7 @@
       "metadata": {
         "id": "-olR0bSQQley"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -149,7 +149,7 @@
         "id": "6RrUkA7MQvRk",
         "outputId": "bfd36874-43f2-4330-ae1a-c0b9ea0da692"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -176,7 +176,7 @@
       "metadata": {
         "id": "aNVwE29lRj47"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -190,7 +190,7 @@
       "metadata": {
         "id": "BftZuMeMRoqG"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -212,7 +212,7 @@
         "id": "YP14CZmDRtF7",
         "outputId": "8568769e-fcb1-4e6b-8acd-892bf399cbe1"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -233,8 +233,7 @@
       "source": [
         "# Step-3 - apply dot product and add bias : f(x) = hiddenLayer.wout + biasOut\n",
         "fx_ = np.dot(hiddenLayer, weightsOutput) + biasOutput\n",
-        "fx_\n",
-        ""
+        "fx_\n"
       ],
       "metadata": {
         "colab": {
@@ -243,7 +242,7 @@
         "id": "sjyWSdhpRwd5",
         "outputId": "2133a797-2e76-435f-dfb2-73506f7378fb"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -260,6 +259,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Bias"
+      ],
+      "metadata": {
+        "id": "VvhEXdpeJrRx"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "biasHidden"
@@ -271,7 +279,7 @@
         "id": "olPoVY17R26_",
         "outputId": "40f551f7-2fdd-4a62-fcdb-f1cc24f8db55"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -297,7 +305,7 @@
         "id": "Zw8YO_TfR5DX",
         "outputId": "4c366c12-82b1-46d2-94b1-8ca9bb59ee3c"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -319,7 +327,7 @@
       "metadata": {
         "id": "d1xYVsoMR6Yt"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -334,7 +342,7 @@
         "id": "0IPSdVXJ109s",
         "outputId": "5236d80a-b907-448d-848f-a0dc895ae695"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -359,7 +367,7 @@
       "metadata": {
         "id": "YLt3OT9sR-KI"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -373,7 +381,7 @@
       "metadata": {
         "id": "0AxjyqmUSB2H"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -389,7 +397,7 @@
       "metadata": {
         "id": "VAHClqaD7oS5"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -403,7 +411,7 @@
       "metadata": {
         "id": "aJ4ZNBNv7jjk"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -418,7 +426,7 @@
         },
         "outputId": "0fc54931-6560-47f6-ba03-258d40af4091"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -447,7 +455,7 @@
       "metadata": {
         "id": "Hp30GhSoPDsH"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -461,7 +469,7 @@
       "metadata": {
         "id": "azel8LO80zp0"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -505,7 +513,7 @@
       "metadata": {
         "id": "kZcM8hhsUiAJ"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -520,7 +528,7 @@
         "id": "sRZ0JKs5zLMU",
         "outputId": "8e948528-8bc7-49d4-df5e-cb9f241b1f8e"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -540,7 +548,33 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "ze-3wNM30667"
+        "id": "ze-3wNM30667",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 165
+        },
+        "outputId": "8e45456b-1092-406c-9ea3-c580c277bbee"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-6fcf9dfbd479>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "07zWRwb0Jlyw"
       },
       "execution_count": null,
       "outputs": []
